base/login/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  labels:
    app: login
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: login
          image: ghcr.io/realliance/ipv8-auth:0.1.7@sha256:e0780314bb9f3f4a5e3640bfe7220f1d568bc88f2f00601e283660c02450c45c
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: login
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: login
