base/login/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: ENDPOINT_CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - LOGIN_ENDPOINT
      secretName: ipv8-login-tls
  rules:
    - host: LOGIN_ENDPOINT
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login
                port:
                  number: 80
